Adjustements to github pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <script src="//cdn.jsdelivr.net/npm/phaser@3.80.0/dist/phaser.js"></script>
 </head>
 <body style="background-color: #000000">
-  <script type="module" src="main.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 </html>
