--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     canvas { position:fixed; inset:0px; margin: auto}
   </style>
   <script src="//cdn.jsdelivr.net/npm/phaser@3.80.0/dist/phaser.js"></script>
+  <script type="module" src="//cdn.jsdelivr.net/npm/phaser@3.80.0/dist/phaser.js"></script>
 </head>
 <body style="background-color: #000000">
   <script type="module" src="src/main.js"></script>
