Aesthetics: animations, background & audio

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Duel of Sages</title>
+  <link rel="icon" type="image/png" href="src/assets/favicon_duel_of_sages.png">
   <style>
     body, html { margin:0; padding:0; overflow:hidden; }
     canvas { position:fixed; inset:0px; margin: auto}
